--- a/test/android/data/sysapps/messaging/messaging_send.html
+++ b/test/android/data/sysapps/messaging/messaging_send.html
@@ -23,6 +23,7 @@ window.onload = function() {
 
   var successCount = 0;
   function onSuccess() {
+    document.getElementById("case_index").innerHTML = successCount;
     ++successCount;
     // Features to test:
     // 1.send sms message
@@ -50,17 +51,17 @@ window.onload = function() {
       JSON.stringify(object, undefined, 2);
   }
 
-  messaging.sms.onsent = function(evt) {
+  messaging.sms.addEventListener('sent', function(evt) {
     printJson("onsent", evt);
-  };
+  });
 
-  messaging.sms.ondeliverysuccess = function(evt) {
+  messaging.sms.addEventListener('deliverysuccess',  function(evt) {
     printJson("ondeliverysuccess", evt);
-  };
+  });
 
-  messaging.sms.ondeliveryerror = function(evt) {
+  messaging.sms.addEventListener('deliveryerror', function(evt) {
     printJson("ondeliveryerror", evt);
-  };
+  });
 
   var sendSmsCallback = function(msg) {
     printJson('send', msg);
@@ -107,7 +108,7 @@ window.onload = function() {
     onSuccess();
   };
 
-  var testNumber = "5556"; // this number is just for testing.
+  var testNumber = "13269475815"; // this number is just for testing.
 
   try {
     messaging.sms.send(testNumber, "Hello Xwalk!")
@@ -136,7 +137,7 @@ window.onload = function() {
   } catch(e) {
     console.log(e);
   }
-  
+
   var filter = {
     type: "sms",
   }
@@ -146,74 +147,74 @@ window.onload = function() {
     limit: 3
   }
   try {
-    messaging.sms.send(testNumber, "Hello Xwalk!")
-    messaging.findMessages(filter, filterOption)
-        .then(findMessagesCallback, errorCallback) 
+    messaging.sms.send(testNumber, "Hello Xwalk!").then(function(){
+      messaging.findMessages(filter, filterOption)
+        .then(findMessagesCallback, errorCallback)}, function(){})
   } catch(e) {
     console.log(e);
   }
 
   try {
-    messaging.sms.send(testNumber, "Hello Xwalk!")
-    messaging.findMessages(filter, filterOption)
+    messaging.sms.send(testNumber, "Hello Xwalk!").then(function(){
+      messaging.findMessages(filter, filterOption)
         .then(function(msg) {
         if (msg.element.length > 0) {
           messaging.getMessage("sms", msg.element[0].messageID)
               .then(getMessageCallback, errorCallback) 
         }
-      }, errorCallback) 
+      }, errorCallback)}, function(){})
   } catch(e) {
     console.log(e);
   }
 
   try {
-    messaging.sms.send(testNumber, "Hello Xwalk!")
-    messaging.findMessages(filter, filterOption)
+    messaging.sms.send(testNumber, "Hello Xwalk!").then(function(){
+      messaging.findMessages(filter, filterOption)
         .then(function(msg) {
         if (msg.element.length > 0) {
           messaging.deleteMessage("sms", msg.element[0].messageID)
               .then(deleteMessageCallback, errorCallback) 
         }
-      }, errorCallback) 
+      }, errorCallback) }, function(){})
   } catch(e) {
     console.log(e);
   }
 
   try {
-    messaging.sms.send(testNumber, "Hello Xwalk!")
-    messaging.findMessages(filter, filterOption)
+    messaging.sms.send(testNumber, "Hello Xwalk!").then(function(){
+      messaging.findMessages(filter, filterOption)
         .then(function(msg) {
         if (msg.element.length > 0) {
           messaging.deleteConversation("sms", msg.element[0].conversationID)
               .then(deleteConversationCallback, errorCallback) 
         }
-      }, errorCallback) 
+      }, errorCallback) }, function(){})
   } catch(e) {
     console.log(e);
   }
 
   try {
-    messaging.sms.send(testNumber, "Hello Xwalk!")
-    messaging.findMessages(filter, filterOption)
+    messaging.sms.send(testNumber, "Hello Xwalk!").then(function(){
+      messaging.findMessages(filter, filterOption)
         .then(function(msg) {
         if (msg.element.length > 0) {
           messaging.markMessageRead("sms", msg.element[0].messageID, false)
               .then(markMessageReadCallback, errorCallback) 
         }
-      }, errorCallback) 
+      }, errorCallback) }, function(){})
   } catch(e) {
     console.log(e);
   }
 
   try {
-    messaging.sms.send(testNumber, "Hello Xwalk!")
-    messaging.findMessages(filter, filterOption)
+    messaging.sms.send(testNumber, "Hello Xwalk!").then(function(){
+      messaging.findMessages(filter, filterOption)
         .then(function(msg) {
         if (msg.element.length > 0) {
           messaging.markConversationRead("sms", msg.element[0].conversationID, false)
               .then(markConversationReadCallback, errorCallback) 
         }
-      }, errorCallback) 
+      }, errorCallback) }, function(){})
   } catch(e) {
     console.log(e);
   }
@@ -221,6 +222,7 @@ window.onload = function() {
 
 </script>
 <div class="title pass" id="pass"></div>
+<div class="title pass" id="case_index"></div>
 
 <div class="title center">Messaging API Example</div>
 
